Fixed Background Color in Non-Retina Display

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -3,8 +3,8 @@
 @very-light-gray: #E6E6E6;
 @light-gray: #757575;
 @gray: #373b41;
-@dark-gray: lighten(#2B2C2F, 2);
-@very-dark-gray: #2B2C2F;
+@dark-gray: lighten(#262729, 2);
+@very-dark-gray: #262729;
 @white: #f3f3f3;
 @light-midnight: #676B79;
 
