--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -8,6 +8,7 @@
 @syntax-cursor-color: white;
 @syntax-selection-color: lighten(@dark-gray, 10%);
 @syntax-background-color: @very-dark-gray;
+@syntax-background-color_retina: @very-dark-gray_retina;
 
 // Guide colors
 @syntax-wrap-guide-color: @dark-gray;
