--- a/styles/colors.less
+++ b/styles/colors.less
@@ -7,20 +7,21 @@
 @dark-gray             : lighten(#262729, 2);
 @very-dark-gray        : #262729;
 
-@dark-gray_retina      : lighten(#2B2C2F, 2);
-@very-dark-gray_retina : #2B2C2F;
+@dark-gray_retina      : lighten(#292A2B, 2);
+@very-dark-gray_retina : #292A2B;
 
 @white                 : #f3f3f3;
 @light-midnight        : #676B79;
 
-@cyan                  : #32DBE6;
-@blue                  : #6CB9FF;
+@blue                  : #65B6FF;
+@blue-light            : #8EC2EF;
 @purple                : #B084EB;
 
 @green                 : #13FFDC;
 @red                   : #FF2C6D;
-@orange                : #ffb86c;
+
+@orange                : #FFB86C;
 @light-orange          : lighten(@orange, 7);
 
-@pink                  : #FF81C9;
+@pink                  : #FF96D2;
 @pink-light            : #BFB8BC;
