--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -12,6 +12,8 @@
 
 // Guide colors
 @syntax-wrap-guide-color: @dark-gray;
+@syntax-wrap-guide-color_retina: @dark-gray;
+
 @syntax-indent-guide-color: @gray;
 @syntax-invisible-character-color: @gray;
 
