Add Install Atom Badge

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -163,3 +163,44 @@ code {
 		font-size: 2em;
 	}
 }
+
+
+.install-atom {
+	display: table;
+	margin: 2em auto;
+	width: 50rem;
+	max-width: 95%;
+	text-align: center;
+	padding: 2em;
+	border-radius: 5px;
+	font-size: 1.5em;
+	background-color: $orange;
+	color: #584b4f;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+	&:hover {
+		background-color: $green;
+	}
+	#atom{
+		display: block;
+		margin: 0 auto;
+		width: 4rem;
+		height: 4rem;
+		margin-bottom: 1em;
+		animation: bounce ease-in-out infinite;
+		animation-duration: 1.5s;
+		animation-fill-mode: backwards;
+		will-change: transform;
+	}
+}
+
+@keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {
+		transform: translateY(0);
+	}
+	40% {
+		transform: translateY(-1.5rem);
+	}
+	60% {
+		transform: translateY(-1rem);
+	}
+}
