--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,21 +1,27 @@
 // These colors are specific to the theme. Do not use in a package!
 
-@very-light-gray: #E6E6E6;
-@light-gray: #757575;
-@gray: #373b41;
-@dark-gray: lighten(#2B2C2F, 2);
-@very-dark-gray: #2B2C2F;
-@white: #f3f3f3;
-@light-midnight: #676B79;
+@very-light-gray       : #E6E6E6;
+@light-gray            : #757575;
+@gray                  : #373b41;
 
-// @cyan: #76DACD;
-@blue: #7DC1FF;
-@purple: #B084EB;
+@dark-gray             : lighten(#262729, 2);
+@very-dark-gray        : #262729;
 
-@green: #35FFDC;
-@red: #FF2C6D;
-@orange: #ffb86c;
-@light-orange: lighten(@orange, 7);
+@dark-gray_retina      : lighten(#292A2B, 2);
+@very-dark-gray_retina : #292A2B;
 
-@pink: #FF90D0;
-@pink-light: #BFB8BC;
+@white                 : #f3f3f3;
+@light-midnight        : #676B79;
+
+@blue                  : #65B6FF;
+@blue-light            : #8EC2EF;
+@purple                : #B084EB;
+
+@green                 : #13FFDC;
+@red                   : #FF2C6D;
+
+@orange                : #FFB86C;
+@light-orange          : lighten(@orange, 7);
+
+@pink                  : #FF96D2;
+@pink-light            : #BFB8BC;
