Fixed Colors in NON-Retina Display

--- a/styles/base.less
+++ b/styles/base.less
@@ -3,16 +3,10 @@
 
 :host,
 atom-text-editor {
-	background-color: @syntax-background-color_retina;
-	// .isRetina-2x({
-	// 	background-color: @syntax-background-color_retina;
-	// });
+	background-color: @syntax-background-color;
 	color: @syntax-text-color;
 	.wrap-guide {
-		background-color: @syntax-wrap-guide-color_retina;
-		// .isRetina-2x({
-		// 	background-color: @syntax-wrap-guide-color_retina;
-		// });
+		background-color: @syntax-wrap-guide-color;
 	}
 	.indent-guide {
 		color: @syntax-indent-guide-color;
