--- a/styles/colors.less
+++ b/styles/colors.less
@@ -4,18 +4,15 @@
 @light-gray            : #757575;
 @gray                  : #373b41;
 
-@dark-gray             : lighten(#262729, 2);
-@very-dark-gray        : #262729;
 
-@dark-gray_retina      : lighten(#292A2B, 2);
-@very-dark-gray_retina : #292A2B;
+@dark-gray             : lighten(#292A2B, 2);
+@very-dark-gray        : #292A2B;
 
 @white                 : #f3f3f3;
 @light-midnight        : #676B79;
 
-@blue                  : #65B6FF;
-@blue-light            : #8EC2EF;
-@purple                : #B084EB;
+@blue                  : #6DB1FF;
+@blue-light            : #65BDFF;
 
 @green                 : #13FFDC;
 @red                   : #FF2C6D;
@@ -23,5 +20,5 @@
 @orange                : #FFB86C;
 @light-orange          : lighten(@orange, 7);
 
-@pink                  : #FF96D2;
+@pink                  : #ed7eb2;
 @pink-light            : #BFB8BC;
