--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -177,8 +177,9 @@ code {
 	background-color: $orange;
 	color: #584b4f;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+	transition: 0.2s all;
 	&:hover {
-		background-color: $green;
+		background-color: #f9c186;
 	}
 	#atom{
 		display: block;
