--- a/styles/base.less
+++ b/styles/base.less
@@ -64,7 +64,9 @@ atom-text-editor .search-results .marker.current-result .region {
 				color: @orange;
 			}
 		}
-		&.scss{
+		&.scss,
+		&.less,
+		&.css{
 			&.import {
 				color: @pink-light !important;
 			}
