--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -5,7 +5,7 @@
 
 // General colors
 @syntax-text-color: @very-light-gray;
-@syntax-cursor-color: white;
+@syntax-cursor-color: @light-gray;
 @syntax-selection-color: lighten(@dark-gray, 10%);
 @syntax-background-color: @very-dark-gray;
 
@@ -13,7 +13,7 @@
 @syntax-wrap-guide-color: @dark-gray;
 
 @syntax-indent-guide-color: @gray;
-@syntax-invisible-character-color: @gray;
+@syntax-invisible-character-color: mix(@very-dark-gray, @gray, 20);
 
 // For find and replace markers
 @syntax-result-marker-color: @light-gray;
