--- a/styles/colors.less
+++ b/styles/colors.less
@@ -19,5 +19,5 @@
 @orange                : #FFB86C;
 @light-orange          : lighten(@orange, 7);
 
-@pink                  : #ed7eb2;
-@pink-light            : #BFB8BC;
+@pink                  : #FF75B5;
+@light-pink            : #FFAAD9;
