--- a/styles/colors.less
+++ b/styles/colors.less
@@ -12,7 +12,7 @@
 
 @blue                  : #6DB1FF;
 @blue-light            : #65BDFF;
-
+@purple                : #B084EB;
 @green                 : #13FFDC;
 @red                   : #FF2C6D;
 
