Fixed constant id tag in pug, jade

--- a/styles/base.less
+++ b/styles/base.less
@@ -131,6 +131,13 @@ atom-text-editor .search-results .marker.current-result .region {
 	&.character.escape {
 		color: @blue;
 	}
+	&.id {
+		&.tag {
+			&.pug, &.jade {
+				color: @light-orange;
+			}
+		}
+	}
 	&.numeric {
 		color: @orange;
 	}
