--- a/styles/colors.less
+++ b/styles/colors.less
@@ -4,7 +4,7 @@
 @light-gray            : #757575;
 @gray                  : #373b41;
 
-@dark-gray             : lighten(#292A2B, 2);
+@dark-gray             : lighten(#292A2B, 2%);
 @very-dark-gray        : #292A2B;
 
 @white                 : #f3f3f3;
@@ -13,11 +13,12 @@
 @blue                  : #6DB1FF;
 @blue-light            : #65BDFF;
 @purple                : #B084EB;
-@green                 : #13FFDC;
+@green                 : #19f9d8;
+// @green                 : #13FFDC;
 @red                   : #FF2C6D;
 
 @orange                : #FFB86C;
-@light-orange          : lighten(@orange, 7);
+@light-orange          : lighten(@orange, 7%);
 
 @pink                  : #FF75B5;
-@light-pink            : #FFAAD9;
+@light-pink            : #FFA7D8;
