--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,6 +1,7 @@
 // These colors are specific to the theme. Do not use in a package!
 
 @very-light-gray       : #E6E6E6;
+@lighter-gray          : darken(@very-light-gray, 10%);
 @light-gray            : #757575;
 @gray                  : #373b41;
 
@@ -10,7 +11,8 @@
 @white                 : #f3f3f3;
 @light-midnight        : #676B79;
 
-@blue                  : #6DB1FF;
+// @blue                  : #6DB1FF;
+@blue                  : #45A9F9;
 @blue-light            : #65BDFF;
 @purple                : #B084EB;
 @green                 : #19f9d8;
@@ -21,4 +23,4 @@
 @light-orange          : lighten(@orange, 7%);
 
 @pink                  : #FF75B5;
-@light-pink            : #FFA7D8;
+@light-pink            : #FF9AC1;
