--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,15 +48,18 @@ main {
 	word-wrap: break-word;
 	a {
 		&:nth-child(1) {
-			color: mix(#FFB86C, #EC2864, 25%);
+			color: mix(#FFB86C, #EC2864, 20%);
 		}
 		&:nth-child(2) {
-			color: mix(#FFB86C, #EC2864, 50%);
+			color: mix(#FFB86C, #EC2864, 40%);
 		}
 		&:nth-child(3) {
-			color: mix(#FFB86C, #EC2864, 75%);
+			color: mix(#FFB86C, #EC2864, 60%);
 		}
 		&:nth-child(4) {
+			color: mix(#FFB86C, #EC2864, 80%);
+		}
+		&:nth-child(5) {
 			color: mix(#FFB86C, #EC2864, 100%);
 		}
 		&:hover {
@@ -227,6 +230,35 @@ code {
 		background-color: #f26e97;
 	}
 	#sublime {
+		display: block;
+		margin: 0 auto;
+		width: 4rem;
+		height: 4rem;
+		margin-bottom: 1em;
+		animation: bounce ease-in-out infinite;
+		animation-duration: 2s;
+		animation-delay: 1s;
+		animation-fill-mode: backwards;
+		will-change: transform;
+	}
+}
+.install-vscode {
+	display: table;
+	margin: 2em auto;
+	width: 50rem;
+	max-width: 95%;
+	text-align: center;
+	padding: 2em;
+	border-radius: 5px;
+	font-size: 1.5em;
+	background-color: $purple;
+	color: #E6E6E6;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+	transition: 0.2s all;
+	&:hover {
+		background-color: #8b7ca0;
+	}
+	#vscode {
 		display: block;
 		margin: 0 auto;
 		width: 4rem;
