--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,24 +1,26 @@
 // These colors are specific to the theme. Do not use in a package!
 
 @very-light-gray       : #E6E6E6;
+@lighter-gray          : darken(@very-light-gray, 10%);
 @light-gray            : #757575;
 @gray                  : #373b41;
 
-
-@dark-gray             : lighten(#292A2B, 2);
+@dark-gray             : lighten(#292A2B, 2%);
 @very-dark-gray        : #292A2B;
 
 @white                 : #f3f3f3;
 @light-midnight        : #676B79;
 
-@blue                  : #6DB1FF;
-@blue-light            : #65BDFF;
-
-@green                 : #13FFDC;
+// @blue                  : #6DB1FF;
+@blue                  : #45A9F9;
+@blue-light            : #6FC1FF;
+@purple                : #B084EB;
+@green                 : #19f9d8;
+// @green                 : #13FFDC;
 @red                   : #FF2C6D;
 
 @orange                : #FFB86C;
-@light-orange          : lighten(@orange, 7);
+@light-orange          : lighten(@orange, 8%);
 
-@pink                  : #ed7eb2;
-@pink-light            : #BFB8BC;
+@pink                  : #FF75B5;
+@light-pink            : #FF9AC1;
