--- a/styles/colors.less
+++ b/styles/colors.less
@@ -13,7 +13,7 @@
 
 // @blue                  : #6DB1FF;
 @blue                  : #45A9F9;
-@blue-light            : #6FC1FF;
+@light-blue            : #6FC1FF;
 @purple                : #B084EB;
 @green                 : #19f9d8;
 // @green                 : #13FFDC;
